--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,28 @@
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!-- Local CSS -->
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<title>Hello World &bull; New project</title>
 	<meta name="description" content=""/>
     <meta name="keywords" content="">
 </head>
 <body>
-	<h1 class="text-primary">HELLO WORLD!</h1>
+	<div class="container">
+		<div class="row pt-3">
+			<div class="col-8">	<h1 class="light">HELLO WORLD!</h1></div>
+			<div class="col-4">
+				<i class="fa fa-industry icon primary"></i>
+			</div>
+			<hr class="primary">
+		</div>
+	</div>
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/popper.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="../node_modules/popper.js/dist/umd/popper.min.js"></script>
+	<script type="text/javascript" src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<!-- Font CDN -->
+	<script src="https://kit.fontawesome.com/3f7f7bdb28.js" crossorigin="anonymous"></script>
 	<!-- JS not Supported! -->
 	<noscript>Your browser does not support JavaScript!</noscript>
 </body>
