fontawesome local added

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="row pt-3">
 			<div class="col-8">	<h1 class="light">HELLO WORLD!</h1></div>
-			<div class="col-4">
+			<div class="col-4 a-c">
 				<i class="fa fa-industry icon primary"></i>
 			</div>
 			<hr class="primary">
